# canvas_fastapi_lti

./: .gitignore  .railway-rebuild  README.md  canvas_test_private_key.base64  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements.txt
.bmad-core/: install-manifest.yaml
.cursor/rules/: analyst.mdc  architect.mdc  bmad-orchestrator.mdc  dev.mdc  pm.mdc  po.mdc  qa.mdc  sm.mdc  ux-expert.mdc
app/: main.py  main_complex.py  main_simple.py
app/api/middleware/: canvas_auth.py  error_handling.py  rate_limiting.py
app/api/routes/: canvas.py  health.py  lti.py  qa_tasks.py  websockets.py
app/core/: canvas_error_handler.py  config.py  dependencies.py  exceptions.py  rate_limiter.py  security.py
app/integrations/: __init__.py
app/qa_framework/: __init__.py
app/qa_framework/base/: __init__.py  data_models.py  execution_engine.py  qa_task.py  task_registry.py
app/qa_framework/tasks/: __init__.py  find_replace.py
app/qa_framework/utils/: __init__.py  canvas_scanner.py  (+2 more)
app/services/: canvas_service.py  lti_service.py  qa_orchestrator.py  session_service.py
app/templates/: qa-dashboard.html
docs/: acu-canvas-configuration.md  architecture.md  canvas-lti-technical-reference.md  canvas-multi-instance-guide.md  deployment-automation.md  deployment-configuration.md  front-end-spec.md  operational-runbooks.md  prd.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  2.1.story.md  2.2.story.md  2.3.story.md  2.4.story.md  epic-2-overview.md
tests/: test_canvas_multi_instance.py  test_health.py  test_user_acceptance.py
(+9 files in other folders)
